added images modified index.css modified index.html

--- a/index.html
+++ b/index.html
@@ -37,28 +37,28 @@
             <h1>Elige tu categoría preferida</h1>
             <div>
                 <div class="alignIcons" >
-                    <img src="./images/estrenos.PNG" alt="Estrenos">
+                    <img class= "fotos_size" src="./images/estrenos.PNG" alt="Estrenos">
                     <p>Estrenos</p>
                 </div>
                 <div class="alignIcons" >
-                    <img src="./images/classic.jpg" alt="Clásicos">
+                    <img class= "fotos_size" src="./images/classic.jpg" alt="Clásicos">
                     <p>Animaciones clásicas</p>
                 </div>
                 <div class="alignIcons" >
-                    <img src="./images/Los-simpsons.jpg" alt="Series">
+                    <img class= "fotos_size" src="./images/Los-simpsons.jpg" alt="Series">
                     <p>Series de animación</p>
                 </div>
 
                 <div class="alignIcons" >
-                    <img src="./images/audio.PNG" alt="Audio">
+                    <img class= "fotos_size" src="./images/audio.PNG" alt="Audio">
                     <p>Producciones de audio</p>
                 </div>
                 <div class="alignIcons" >
-                    <img src="./images/animacioninfanti.PNG" alt="Infantil">
+                    <img class= "fotos_size" src="./images/animacioninfanti.PNG" alt="Infantil">
                     <p>Animación infantil</p>
                 </div>
                 <div class="alignIcons" >
-                    <img src="./images/tienda.PNG" alt="Tienda">
+                    <img class= "fotos_size" src="./images/tienda.PNG" alt="Tienda">
                     <p>Tienda</p>
                 </div>
             </div>
