added changes on Categories section. CSSs added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     
 </head>
 <body>
+   <!-- 
    <header class="backgroundColorBlue">
      <div>
         <img src="./images/logo_animation.png" alt="Animation Records">
@@ -29,51 +30,55 @@
         <p>Carrito</p>
     </div>     
    </header> 
+   -->
    <main>
+        <!--
         <section id="sectionBanner">
             <img src="./images/banner_web2.png" alt="Banner Home">
-        </section>   
+        </section>
+        -->  
         <section id="sectionCategories">
-            <h1>Elige tu categoría preferida</h1>
-            <div>
-                <div class="alignIcons" >
+            <div id="categoriesTitle"><h1>Elige tu categoría preferida</h1></div>
+            <div class="alignCategories">
+                <div class="alignIcons">
                     <img class= "fotos_size" src="./images/estrenos.PNG" alt="Estrenos">
                     <p>Estrenos</p>
                 </div>
-                <div class="alignIcons" >
+                <div class="alignIcons">
                     <img class= "fotos_size" src="./images/classic.jpg" alt="Clásicos">
                     <p>Animaciones clásicas</p>
                 </div>
-                <div class="alignIcons" >
+                <div class="alignIcons">
                     <img class= "fotos_size" src="./images/Los-simpsons.jpg" alt="Series">
                     <p>Series de animación</p>
                 </div>
 
-                <div class="alignIcons" >
+                <div class="alignIcons">
                     <img class= "fotos_size" src="./images/audio.PNG" alt="Audio">
                     <p>Producciones de audio</p>
                 </div>
-                <div class="alignIcons" >
+                <div class="alignIcons">
                     <img class= "fotos_size" src="./images/animacioninfanti.PNG" alt="Infantil">
                     <p>Animación infantil</p>
                 </div>
-                <div class="alignIcons" >
+                <div class="alignIcons">
                     <img class= "fotos_size" src="./images/tienda.PNG" alt="Tienda">
                     <p>Tienda</p>
                 </div>
             </div>
         </section> 
-        <section class="backgroundColorBlue">
+        <section class="newsletter">
             <h1>Apúntate a nuestra newsletter para estar al día</h1>
             <form action="">
                 <input type="email" placeholder="Email">
                 <input type="submit" value="Enviar">
             </form>
-        </section>   
-       
+        </section>          
    </main>
+   <!--
    <footer class="backgroundColorBlue">
        <p>© Animation Records S.L.</p>
    </footer>
+    -->
 </body>
 </html>
