modified app.js index.html

--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
             <h1>Apúntate a nuestra newsletter para estar al día</h1>
             <form action="">
                 <input type="email" placeholder="Email">
-                <input type="submit" value="Enviar">
+                <input type="submit" onclick= "getData()" value="Enviar">
             </form>
+            <script src="./app.js"></script>
         </section>          
    </main>
    <!--
