modified article.html modified styles/detail_styles/detail.css modified styles/general_styles/generalArticle.css modified styles/links.css modified styles/product_styles/product.css

--- a/article.html
+++ b/article.html
@@ -46,19 +46,17 @@
     </header> 
     <main>
     <div id="product">
-        <div class="alignPhotos">
-            <img class="fotos_size" src="./images/cars2.jpeg">
+        <div class="alignBigPhoto">
+            <img class="foto_grande" src="./images/cars2.jpeg">
         </div>
-        <div class="alignPhotos">
-            <img class="fotos_size" src="./images/ramon1.jpg">
-            <img class="fotos_size" src="./images/ramon2.jpg">
-            <img class="fotos_size" src="./images/cars2.jpeg">
+        <div class="alignMiniPhotos">
+            <img class="fotos_mini" src="./images/ramon1.jpg">
+            <img class="fotos_mini" src="./images/ramon2.jpg">
+            <img class="fotos_mini" src="./images/cars2.jpeg">
         </div>
-    </div>
-    <div id="compraDetalle">
+        <div class="alignDescription"> 
         <h3>Descripción</h3>
-        <p>Original Pixar coches  Ramone Rayo McQueen Mater Jackson tormenta Ramírez Disney vehículo fundido de aleación de metal, juguetes para niños .</p>
-        <div class="alignDescription">            
+        <p>Original Pixar coches  Ramone Rayo McQueen Mater Jackson tormenta Ramírez Disney vehículo fundido de aleación de metal, juguetes para niños .</p>                  
         </div>
         <div class="alignLike">
             <p>Me gusta</p>
