--- a/article.html
+++ b/article.html
@@ -8,78 +8,102 @@
     <link rel="stylesheet" href="./styles/index.css">
 </head>
 <body>
-    <header class="backgroundColorBlue">
-        <div>
-           <img src="./images/logo_animation.png" alt="Animation Records">
-       </div>
-       <div>
-           <h1>Todo en contenidos de animación</h1>
-       </div>
-       <div class="alignIcons">
-           <img src="./images/home.png" alt="Home">
-           <p>Home</p>
-       </div>       
-       <div class="alignIcons">   
-           <img src="./images/categories.png" alt="Categorias">
-           <p>Categorías</p>
-           <nav role="navigation">
-               <div id="menuToggle">
-                   <span></span>
-                   <span></span>
-                   <span></span>
 
-                   <ul id="Categorías">
-                    <a href="#"><li>Estrenos</li></a>
-                    <a href="#"><li>Animaciones clásicas</li></a>
-                    <a href="#"><li>Series de animación</li></a>
-                    <a href="#"><li>Producciones de audio</li></a>
-                    <a href="#"><li>Animación infantil</li></a>
-                    <a href="#"><li>Tienda</li></a>
-                   </ul>
-               </div>
-           </nav>
-       </div>   
-       <div class="alignIcons">  
-           <img src="./images/carrito.png" alt="Carrito">
-           <p>Carrito</p>
-       </div>     
-    </header> 
+    <header class="sizeSection">
+
+        <div class="logoSection">
+            <img src="./images/logo_animation.png" alt="Animation Records"class="sizeLogo" >
+        </div>
+
+        <div class="tituloylogo">
+            <div class="textHeader" >
+                <h1>Todo en contenidos de animación</h1>
+            </div>  
+            <nav class="aligElem">
+                <div class="center">
+                    <a href="./index.html">
+                    <img  class="icons" src="./images/home.png" alt="Home"></a>
+                    Home               
+                </div>       
+                <div class="center">   
+                    <input type="checkbox" id="botonMenu">
+                    <label for="botonMenu"><img src="./images/categories.png" class="icons" alt="categorias"></label>
+                    Categorias
+                    <nav class="menu">
+                        <tr><a href="#"><span>Estrenos</span> </a></tr>
+                        <tr><a href="#"><span>Clásicos</span></a></tr>
+                        <tr><a href="#"><span>Series</span></a></tr>
+                        <tr><a href="#"><span>Audios</span></a></tr>
+                        <tr><a href="#"><span>Infantil</span></a></tr>
+                        <tr><a href="./tienda.html"><span>Tienda</span></a></tr>
+                    </nav>
+                </div>
+                <div class="center">  
+                    <img class="icons" src="./images/carrito.png" alt="Carrito">
+                    Carrito
+                </div> 
+            </nav>
+        </div> 
+
+   </header> 
+    
     <main>
-    <div id="product">
-        <div class="alignBigPhoto">
-            <img class="foto_grande" src="./images/cars2.jpeg">
+
+        <section id="product">
+
+            <section id="articleImages">
+
+                <div class="alignBigPhoto">
+                    <img class="foto_grande" src="./images/cars2.jpeg">
+                </div>
+
+                <div class="alignMiniPhotos">
+                    <img class="fotos_mini" src="./images/ramon1.jpg">
+                    <img class="fotos_mini" src="./images/ramon2.jpg">
+                    <img class="fotos_mini" src="./images/cars2.jpeg">
+                </div>
+
+            </section>      
+
+            <section id="articleOptions">
+
+                <div class="alignDescription"> 
+                    <h3>Descripción</h3>
+                    <span id="descriptionText">Original Pixar coches Ramone Rayo McQueen Mater Jackson tormenta Ramírez Disney vehículo fundido de aleación de metal, juguetes para niños. Original Pixar coches Ramone Rayo McQueen Mater Jackson tormenta.</span>                  
+                </div>
+
+                <div class="alignLike">
+                    <span>Me gusta</span>
+                    <img class="articleIcons" src="./images/me-gusta.png">
+                </div>
+
+                <div class="alignBasket">
+                    <img class="articleIcons" src="./images/carrito.png">
+                    <span>Añadir al carrito</span>         
+                </div>
+
+            </section>      
+            
+        </section>
+
+        <div id="relatedItems">
+            <h2>Artículos relacionados</h2>
+            <div class="alignRelated">
+                <img class="relatedImages" src="./images/cenicienta2.jpeg">
+                <img class="relatedImages" src="./images/walle2.jpeg">
+                <img class="relatedImages" src="./images/monstruossa2.jpeg">
+                <img class="relatedImages" src="./images/minios.jpeg">
+            </div>
         </div>
-        <div class="alignMiniPhotos">
-            <img class="fotos_mini" src="./images/ramon1.jpg">
-            <img class="fotos_mini" src="./images/ramon2.jpg">
-            <img class="fotos_mini" src="./images/cars2.jpeg">
+
+        <div class="alignBack">
+            <a href="./index.html">Back</a>
         </div>
-        <div class="alignDescription"> 
-        <h3>Descripción</h3>
-        <p>Original Pixar coches  Ramone Rayo McQueen Mater Jackson tormenta Ramírez Disney vehículo fundido de aleación de metal, juguetes para niños .</p>                  
-        </div>
-        <div class="alignLike">
-            <p>Me gusta</p>
-            <img class="fotos_size" src="./images/me-gusta.png">
-        </div>
-        <div class="alignBasket">
-            <img class="fotos_size" src="./images/carrito.png">
-            <p>Añadir al carrito</p>           
-        </div>
-    </div>
-    <div id="relatedItems">
-        <h2>Artículos relacionados</h2>
-        <div class="alignRelated">
-            <img class="fotos_size" src="./images/cenicienta2.jpeg">
-            <img class="foto_size" src="./images/walle2.jpeg">
-            <img class="fotos_size" src="./images/monstruossa2.jpeg">
-            <img class="fotos_size" src="./images/minios.jpeg">
-        </div>
-    </div>
-    <!--Falta el botón de atrás-->
+
     </main>
-<footer class="backgroundColorBlue">
-    <p>© Animation Records S.L.</p>
-</footer>
+
+    <footer class="sizeSection">
+        <p>© Animation Records S.L.</p>
+    </footer>
 </body>
 </html>
